# zudo-doc

./: .design-token-lint.json  .env.example  .gitignore  .mdx-formatter.json  .npmrc  .prettierignore  .template-drift-allowlist  CLAUDE.md  astro.config.ts  lefthook.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json5  tsconfig.json  vitest.config.ts  wrangler.toml  zfb-shim.d.ts  zfb.config.ts
__inbox/: W1A-upstream-survey.md  W1B-workaround-audit.md  W2-confirm-report.md  W2A-implementation-spec.md  W4A-local-confirm.md  W5A-verify-ui-results.md
_artwork-resources/: icons.ai
audits/: 03-content-mdx.md  04-header.md  05-footer.md  06-sidebar-toc.md  07-routing-i18n.md  08-content-tags.md  09-theme-design-tokens.md  10-search.md  11-ai-chat.md  12-doc-history.md  13-meta-and-generators.md  14-pipelines.md  feature-checklist.md
css-playground/: .npmrc  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: smart-break-dynamic-inventory.md
e2e/: CLAUDE.md  helpers.ts  i18n-sidebar-fallback.spec.ts  setup-fixtures.sh  sidebar-filter.spec.ts  sidebar-helpers.ts  sidebar-persistence.spec.ts  smoke-404.spec.ts  smoke-admonitions.spec.ts  smoke-ai-chat.spec.ts  smoke-blog.spec.ts  smoke-breadcrumbs.spec.ts  smoke-code-blocks.spec.ts  smoke-color-scheme.spec.ts  smoke-details.spec.ts  smoke-dist-helper.ts  smoke-doc-history.spec.ts  smoke-edit-link.spec.ts  smoke-frontmatter-preview.spec.ts  smoke-mermaid.spec.ts  (+18 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+650 files in other folders)
