# Build the .app bundle: cargo tauri build
# (requires `cargo install tauri-cli` or `cargo binstall tauri-cli`)

[package]
name = "zudo-doc"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
axum = "0.8"
tokio = { version = "1", features = ["rt", "net", "fs"] }
tower-http = { version = "0.6", features = ["fs"] }
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
